--- a/1postaja.html
+++ b/1postaja.html
@@ -17,11 +17,11 @@
 <body>
 
 <div class="box">
-  <h1>Popravilo 1 – Okvara sistema ⚠️</h1>
+<h1>Popravilo 1 – Okvara sistema ⚠️</h1>
 
 <p>
   Šolski računalniški sistem ne deluje pravilno.  
-  Virus je povzročil, da računalnik trenutno razume samo še <strong>0</strong> in <strong>1</strong>.
+  Virus je povzročil, da računalnik trenutno razume samo <strong>izklop</strong> in <strong>vklop</strong>, kar pretvori v <strong>0</strong> in <strong>1</strong>.
 </p>
 
 <p>
@@ -34,11 +34,21 @@
 </p>
 
 <p>
-  Spodaj vidiš računalniški zapis:
+  Na računalniku je 5 lučk: 
+</p>
+<p style="font-size:1.4rem; text-align:center;">
+  💡 ⚫ 💡 💡 ⚫
 </p>
 
-<pre style="text-align:center; font-size:1.4rem;">10110</pre>
+<pre style="text-align:center; font-size:1.4rem;">1 0 1 1 0</pre>
+<p>
+  To pomeni:
+</p>
 
+<ul>
+  <li><strong>1</strong> → lučka je <strong>prižgana</strong></li>
+  <li><strong>0</strong> → lučka je <strong>ugasnjena</strong></li>
+</ul>
 <p>
   Tvoja naloga je, da ta zapis <strong>pretvoriš v navadno število</strong>.  
   Ko ga izračunaš, ga vpiši spodaj in s tem popravi prvi del sistema.
